resources_for_testing/tests/asm/error/wrong_no_args.s
.name "wrong"
.comment "error"

l2:		sti r1, %:live, %1
		and 					#no args

live:	live %1
		zjmp %:live
